--- a/style/style.scss
+++ b/style/style.scss
@@ -166,6 +166,7 @@ nav {
   gap: 1rem;
   
   width: 60%;
+
   // border: 1px solid black;
   
   margin: auto;
@@ -270,18 +271,25 @@ nav {
     width: calc(24% - 1rem);
     height: fit-content;
 
-    padding: 0.5rem;
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    #content-legend {
+      display: grid;
+      // grid-template-columns: 1f;
+      place-items: center;
+      font-weight: 700;
+      opacity: 0.3;
+      margin-bottom: 0.8rem;
+    }
 
-    opacity: 0;
-
-    transition: 0.15s ease-in-out;
-
-    user-select: none;
-
-    overflow: hidden;
+    #note-preview {
+      padding: 0.5rem;
+      background-color: white;
+      border-radius: 5px;
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+      transition: 0.15s ease-in-out;
+      overflow: hidden;
+      user-select: none;
+      opacity: 0;
+    }
 
     #preview-title {
       font-size: 1.4rem;
