--- a/style/style.css
+++ b/style/style.css
@@ -373,9 +373,9 @@ nav #nav-btns .nav-btn input {
   #content {
     width: 90%;
   }
-  #content #content-preview {
-    right: 5%;
-    width: calc(40% - 1rem - 5%);
+  #content #note-preview {
+    right: 5% !important;
+    width: calc(40% - 1rem - 5%) !important;
   }
 }
 /*# sourceMappingURL=style.css.map */
