--- a/style/style.scss
+++ b/style/style.scss
@@ -76,7 +76,7 @@ body {
       border-radius: 5px;
 
       &:nth-child(6) {
-        overflow: scroll;
+        overflow-y: scroll;
         height: 40vh;
       }
 
@@ -127,6 +127,64 @@ body {
 
   h1 {
     text-align: center;
+  }
+}
+
+#showNoteModal {
+  position: fixed;
+  z-index: 100;
+  left: 20%;
+  top: 10vh;
+
+  display: flex;
+  flex-direction: column;
+
+  width: 60%;
+
+  background-color: #fff;
+  padding: 1rem;
+
+  border-radius: 10px;
+
+  h1, h3 {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+  }
+
+  h3 {
+    font-weight: 400;
+  }
+
+  #noteContent {
+    margin-top: 2rem;
+    max-height: 60vh;
+    overflow-y: scroll;
+  }
+
+  .bolded {
+    font-weight: 700;
+  }
+
+  #closeNoteBtn {
+    display: flex;
+    align-self: center;
+    justify-content: center;
+
+    padding: 0.5rem;
+    border-radius: 5px;
+    font-weight: 700;
+    margin-top: 3rem;
+    width: 50%;
+    text-align: center;
+    transition: 0.15s ease-in-out;
+    cursor: pointer;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
+    &:hover {
+      background-color: #f05151;
+      color: white;
+    }
   }
 }
 
@@ -233,6 +291,12 @@ nav {
       font-weight: 700;
     }
 
+    #items-container {
+      display: flex;
+      flex-direction: column;
+      gap: 0.8rem;
+    }
+
     .list-item {
       display: grid;
       grid-template-columns: 0.5fr 2fr 1fr 1fr;
@@ -288,6 +352,16 @@ nav {
       .item-title {
         font-size: 1.2rem;
         font-weight: 700;
+        cursor: pointer;
+
+        gap: 0.3rem;
+
+        i {
+          font-size: 1.4rem;
+          opacity: 0;
+
+          transition: 0.15s ease-in-out;
+        }
       }
 
       .item-category {
